# speech-to-phrase

./: .gitignore  .gitmodules  .projectile  CHANGELOG.md  CONTRIBUTING.md  README.md  SENTENCES.md  intents.yaml  mypy.ini  pyproject.toml  requirements_dev.txt
.github/workflows/: test.yml
coqui_stt/src/: CMakeLists.txt  alphabet.cc  alphabet.h  modelstate.cc  modelstate.h  stt.cc  stt.h  stt_onlyprobs.cpp  tflitemodelstate.cc
coqui_stt/src/ctcdecode/: decoder_utils.cpp  decoder_utils.h
docs/: dutch.md  english.md  french.md  german.md  italian.md  spanish.md
script/: format  generate_doc_sentences.py  generate_test_wav.sh  generate_test_wavs.py  lint  match_sentences.py  setup  sync_test_wavs.py  test_ci
sentences/: en.yaml
speech_to_phrase/: __init__.py  __main__.py  audio.py  const.py  event_handler.py  g2p.py  hass_api.py  hassil_fst.py  lang_sentences.py  models.py  shared_lists.yaml  train.py  train_coqui_stt.py  train_kaldi.py  transcribe.py  transcribe_coqui_stt.py  transcribe_kaldi.py  util.py
speech_to_phrase/sentences/: ca.yaml  cs.yaml  de.yaml  el.yaml  en.yaml  es.yaml  eu.yaml  fa.yaml  fi.yaml  fr.yaml  hi.yaml  it.yaml  mn.yaml  nl.yaml  pl.yaml  pt_PT.yaml  ro.yaml  ru.yaml  sl.yaml  sv.yaml  sw.yaml  th.yaml  tr.yaml
tests/: README.md  __init__.py  conftest.py  generate_example_sentences.py  test_dutch.py  test_english.py  test_french.py  test_g2p.py  test_german.py  test_greek.py  test_hass_api.py  test_hass_recognize.py  test_hassil_fst.py  test_italian.py  test_models.py  test_possible_sentences.py  test_recognize.py  test_russian.py  test_sentences_recognized.py  test_spanish.py  test_transcribe.py  test_validate_yaml.py  test_wav_files.py  util.py
tests/custom_sentences/de/: todo.yaml
tests/custom_sentences/en/: set_temperature.yaml  todo.yaml
tests/example_sentences/: en.json
tests/fixtures/: ca.yaml  cs.yaml  de.yaml  el.yaml  en.yaml  es.yaml  eu.yaml  fa.yaml  fi.yaml  fr.yaml  hi.yaml  it.yaml  mn.yaml  nl.yaml  pl.yaml  pt_PT.yaml  ro.yaml  ru.yaml  sl.yaml  sw.yaml  th.yaml  tr.yaml
tests/sentences/: ca.yaml  cs.yaml  de.yaml  el.yaml  en.yaml  es.yaml  eu.yaml  fa.yaml  fi.yaml  fr.yaml  hi.yaml  it.yaml  mn.yaml  nl.yaml  pl.yaml  pt_PT.yaml  ro.yaml  ru.yaml  sl.yaml  sw.yaml  th.yaml  tr.yaml
tests/test_sentences/: codes.txt  de.csv  en.csv  es.csv  fr.csv  it.csv  nl.csv
tests/wav/en/: nevermind.txt
